--- a/_teaching/yale-2250.md
+++ b/_teaching/yale-2250.md
@@ -7,7 +7,7 @@ venue: "Yale University"
 date: 2025-09-04
 ---
 
-I am one of two TAs for Math 2250 in Fall 2025. My responsibilities include holding office hours (~4 hours a week), grading, managing the graders and assigning grading assignments, overseeing undergraduate peer tutors' and aiding their office hours (~10 hours a week of additional teaching), and aiding in exam preparation and proctoring.
+I am one of two TAs for Math 2250 in Fall 2025. My responsibilities include holding office hours (~4 hours a week), grading, managing the graders and assigning grading assignments, overseeing undergraduate peer tutors' and aiding their office hours (~10 hours a week of additional teaching), and aiding in exam preparation and proctoring. I was incredibly involved in this course, including attending peer tutors' office hours to assist, lecturing as a substitute for the course, and writing exam problems. I received extremely positive course evaluations (an average rating of 4.35, significantly above the department average). 
 
 Materials:
 - 
